// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequireAuth passes function to returned Route that renders CircularProgress when permissions fetching 1`] = `
<Route
  exact={true}
  path="/path"
  strict={true}
>
  <WithStyles(ForwardRef(CircularProgress))
    className="makeStyles-circularProgress-1"
    size={70}
  />
</Route>
`;

exports[`RequireAuth passes function to returned Route that renders PrivateComponent when user has tokens 1`] = `
<Route
  exact={true}
  path="/path"
  strict={true}
>
  <PrivateComponent />
</Route>
`;

exports[`RequireAuth passes function to returned Route that renders PublicComponent when user has no tokens 1`] = `
<Route
  exact={true}
  path="/path"
  strict={true}
>
  <PublicComponent />
</Route>
`;

exports[`RequireAuth renders passing correct props to returned Route 1`] = `
<Route
  exact={true}
  path="/path"
  strict={true}
>
  <PrivateComponent />
</Route>
`;
